# ucd-csi2312-pa2

./: CMakeLists.txt  Cluster.cpp  Cluster.h  ClusteringTests.cpp  ClusteringTests.h  KMeans.cpp  KMeans.h  Main.cpp  OutPut.txt  Point.cpp  Point.h  README.md  input.txt  points1.csv
